style: Format code

--- a/front-end/src/popup.html
+++ b/front-end/src/popup.html
@@ -32,10 +32,9 @@
 			</header>
 			<main class="page-content">
 				<p id="page-setup-desc">
-					<b>Styra</b> is smart <b>blabla</b> which enables you to
-					blabla and live a <b>better life</b> and do things that
-					<b>matter</b>. It knows what <b>you care about</b>, without
-					you having to tell it.
+					<b>Styra</b> is smart <b>blabla</b> which enables you to blabla and
+					live a <b>better life</b> and do things that <b>matter</b>. It knows
+					what <b>you care about</b>, without you having to tell it.
 				</p>
 				<label class="labeled-input">
 					Enter you name
@@ -53,11 +52,7 @@
 		<main class="page" id="page-main">
 			<header class="header-main">
 				<section class="header-main-logo-group">
-					<img
-						class="header-logo"
-						src="./assets/logo.svg"
-						alt="Logo"
-					/>
+					<img class="header-logo" src="./assets/logo.svg" alt="Logo" />
 					<h3 class="header-name">Styra</h3>
 				</section>
 				<button class="button button-light">See Analysis 🤔</button>
@@ -69,8 +64,7 @@
 			<main class="page-content">
 				<h3 id="page-main-heading"></h3>
 				<p id="page-main-text">
-					You're going strong. We'll let you know when we feel
-					something's off!
+					You're going strong. We'll let you know when we feel something's off!
 				</p>
 			</main>
 			<canvas id="page-main-canvas"></canvas>
@@ -84,8 +78,8 @@
 			<main class="page-content">
 				<h3></h3>
 				<p>
-					We noticed that you've been drifting off-track. Let us help
-					you get back on track ☺️. Want to resume working?
+					We noticed that you've been drifting off-track. Let us help you get
+					back on track ☺️. Want to resume working?
 				</p>
 				<button class="button button-emoji button-main">
 					You got me. Resume My work <span>😅</span>
@@ -98,15 +92,10 @@
 
 		<main class="page" id="page-analysis">
 			<header class="header-main">
-				<button class="button button-emoji button-light">
-					👈 Back
-				</button>
+				<button class="button button-emoji button-light">👈 Back</button>
 				<h3 class="header-name">See how you have been doing</h3>
 			</header>
-			<main
-				class="page-content"
-				style="overflow-y: scroll; height: 500px"
-			>
+			<main class="page-content" style="overflow-y: scroll; height: 500px">
 				<div id="timeline" class="timeline"></div>
 			</main>
 		</main>
@@ -138,8 +127,7 @@
 				<h2></h2>
 
 				<p>
-					Take a few minutes and walk around your home. You deserve to
-					relax !
+					Take a few minutes and walk around your home. You deserve to relax !
 				</p>
 
 				<button class="button button-emoji button-main">
