--- a/front-end/src/background.html
+++ b/front-end/src/background.html
@@ -24,7 +24,7 @@
 		<title>Manage me</title>
 	</head>
 	<body>
-        <h1>BACKGROUND YO</h1>
+		<h1>BACKGROUND YO</h1>
 		<main class="page" id="page-setup">
 			<header class="header-main">
 				<img class="header-logo" src="./assets/logo.svg" alt="Logo" />
@@ -35,10 +35,9 @@
 			</header>
 			<main class="page-content">
 				<p id="page-setup-desc">
-					<b>Styra</b> is smart <b>blabla</b> which enables you to
-					blabla and live a <b>better life</b> and do things that
-					<b>matter</b>. It knows what <b>you care about</b>, without
-					you having to tell it.
+					<b>Styra</b> is smart <b>blabla</b> which enables you to blabla and
+					live a <b>better life</b> and do things that <b>matter</b>. It knows
+					what <b>you care about</b>, without you having to tell it.
 				</p>
 				<label class="labeled-input">
 					Enter you name
@@ -61,8 +60,7 @@
 			<main class="page-content">
 				<h3 id="page-main-heading"></h3>
 				<p id="page-main-text">
-					You're going strong. We'll let you know when we feel
-					something's off!
+					You're going strong. We'll let you know when we feel something's off!
 				</p>
 			</main>
 			<canvas id="page-main-canvas"></canvas>
@@ -76,8 +74,8 @@
 			<main class="page-content">
 				<h3 id="page-distract-heading"></h3>
 				<p id="page-main-text">
-					We noticed that you've been drifting off-track. Let us help
-					you get back on track ☺️. Want to resume working?
+					We noticed that you've been drifting off-track. Let us help you get
+					back on track ☺️. Want to resume working?
 				</p>
 				<button class="button button-emoji">
 					You got me. Resume My work <span>😅</span>
